# tdm

./: README.md
configs/: full.toml  small.toml
cpp/: CMakeLists.txt  data_mover.cc  data_mover_actions.cc  data_mover_actions.hh
cpp/configuration/: column_config.cc  column_config.hh  data_mover_config.cc  data_mover_config.hh  database_config.cc  database_config.hh  table_config.cc  table_config.hh
cpp/processing/: abstract_processor.hh  data_mover_processors.cc  data_mover_processors.hh  encryption_processor.cc  encryption_processor.hh  hello_world_processor.cc  hello_world_processor.hh
cpp/structure/: column_structure.cc  column_structure.hh  data_mover_structure.cc  data_mover_structure.hh  database_structure.cc  database_structure.hh  schema_structure.cc  schema_structure.hh  table_structure.cc  table_structure.hh
cpp/utility/: connection_from_config.cc  connection_from_config.hh
dotnet/: data_mover.sln
dotnet/data_mover/: DatabaseObjects.cs  DbConfig.cs  Program.cs  data_mover.csproj
dotnet/data_mover/ColumnProcessors/: ColumnProcessors.cs  IColumnProcessor.cs
java/datamover/: build.gradle  settings.gradle
java/datamover/gradle/wrapper/: gradle-wrapper.properties
java/datamover/src/main/java/ai/tonic/datamover/: DatabaseColumn.java  DatabaseTable.java  DbConfig.java  Main.java  TableConfiguration.java
java/datamover/src/main/java/ai/tonic/datamover/columnprocessors/: ColumnProcessor.java  ColumnProcessors.java  EncryptionProcessor.java  HelloWorldProcessor.java
